[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgitize"
description = "Self-host your repositories using cgit"
license = {text = "MIT"}
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "Egor.Tensin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "atlassian-python-api ~= 3.28.0",
    'importlib-metadata ~= 4.0 ; python_version < "3.8"',
    "PyGithub ~= 1.0",
    "python-gitlab ~= 2.0",
    "tomli ~= 1.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/cgitize"
"Bug Tracker" = "https://github.com/egor-tensin/cgitize/issues"

[project.scripts]
cgitize = "cgitize.main:main"

[tool.setuptools]
packages = ["cgitize"]

[tool.setuptools_scm]
