[build-system]
# The SPDX license identifiers are available from 77.0.3:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgitize"
description = "Self-host your repositories using cgit"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "egor@tensin.name"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "atlassian-python-api ~= 4.0",
    'importlib-metadata ~= 4.0 ; python_version < "3.8"',
    "PyGithub ~= 2.0",
    "python-gitlab ~= 6.0",
    "tomli >= 1,< 3",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/cgitize"
"Bug Tracker" = "https://github.com/egor-tensin/cgitize/issues"

[project.scripts]
cgitize = "cgitize.main:main"

[tool.setuptools]
packages = ["cgitize"]

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true
