[metadata]
name = cgitize
version = 1.0
author = Egor Tensin
author_email = Egor.Tensin@gmail.com
description = Mirror your git repositories and make them cgit-ready
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/egor-tensin/cgitize
project_urls =
    Bug Tracker = https://github.com/egor-tensin/cgitize/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Version Control :: Git

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    cgitize = cgitize.main:main
