[metadata]
name = cgitize
# Don't use shortened versions here (like v2.0 instead of v2.0.X),
# docker/metadata-action doesn't like them:
version = 4.0.3
author = Egor Tensin
author_email = Egor.Tensin@gmail.com
description = Self-host your repositories using cgit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/egor-tensin/cgitize
project_urls =
    Bug Tracker = https://github.com/egor-tensin/cgitize/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Version Control :: Git

[options]
install_requires =
    atlassian-python-api ~= 3.28.0
    PyGithub ~= 1.0
    python-gitlab ~= 2.0
    tomli ~= 1.0
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    cgitize = cgitize.main:main
